# apply-operator

./: .env.example  .gitignore  AI_ENGINEERING.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/rules/: ai-framework.md  architecture.md  documentation.md  logging.md  pull-request.md  security.md  testing.md
.claude/skills/write-adr/: skill.md
.claude/skills/write-adr/examples/: functional-decomposition.md
.claude/skills/write-adr/templates/: adr-template.md
.github/workflows/: ci.yml
docs/architecture/: architecture.md
docs/guide/: deployment.md  developer.md
docs/issues/: 001-project-setup-and-verify.md  002-pdf-text-extraction.md  003-llm-provider-setup.md  004-resume-structured-extraction.md  005-playwright-browser-basics.md  006-search-jobs-node.md  007-analyze-fit-node.md  008-minimal-graph-integration.md  009-fill-application-node.md  010-cli-progress-and-reporting.md  011-error-handling-and-retry.md  012-langgraph-checkpointing.md  013-state-model-refinement.md  014-cover-letter-generation.md  015-comprehensive-testing.md  016-ci-pipeline.md  017-job-site-adapters.md  README.md
scripts/: test_browser.py
src/apply_operator/: __init__.py  __main__.py  checkpoint.py  config.py  graph.py  main.py  state.py
src/apply_operator/nodes/: __init__.py  analyze_fit.py  fill_application.py  generate_cover_letter.py  parse_resume.py  report_results.py  search_jobs.py
src/apply_operator/prompts/: __init__.py  cover_letter.py  form_filling.py  job_matching.py  resume_analysis.py
src/apply_operator/tools/: __init__.py  browser.py  llm_provider.py  logging_utils.py  pdf_parser.py  retry.py
src/apply_operator/tools/adapters/: __init__.py  base.py  indeed.py  linkedin.py
tests/: conftest.py  test_adapters.py  test_analyze_fit.py  test_browser.py  test_checkpoint.py  test_config.py  test_fill_application.py  test_generate_cover_letter.py  test_graph.py  test_llm_provider.py  test_logging_utils.py  test_main.py  test_parse_resume.py  test_pdf_parser.py  test_retry.py  test_search_jobs.py  test_state.py
