[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apply-operator"
version = "0.1.0"
description = "AI agent that automates job applications using resume data and browser automation"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "langgraph>=0.3",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.1",
    "playwright>=1.49",
    "pymupdf>=1.25",
    "typer>=0.15",
    "rich>=13.9",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.scripts]
apply-operator = "apply_operator.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/apply_operator"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
