[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apply-operator"
version = "0.1.0"
description = "AI agent that automates job applications using resume data and browser automation"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "langgraph>=0.3",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.1",
    "playwright>=1.49",
    "pymupdf>=1.25",
    "typer>=0.15",
    "rich>=13.9",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.scripts]
apply-operator = "apply_operator.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/apply_operator"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/apply_operator/main.py" = ["B008"]  # typer.Option() in defaults is idiomatic

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "fitz",
    "fitz.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
